; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_transaction_management.c_ResetShardPlacementTransactionState.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_transaction_management.c_ResetShardPlacementTransactionState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MultiShardCommitProtocol = common dso_local global i64 0, align 8
@COMMIT_PROTOCOL_BARE = common dso_local global i64 0, align 8
@SavedMultiShardCommitProtocol = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ResetShardPlacementTransactionState to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ResetShardPlacementTransactionState() #0 {
  %1 = load i64, i64* @MultiShardCommitProtocol, align 8
  %2 = load i64, i64* @COMMIT_PROTOCOL_BARE, align 8
  %3 = icmp eq i64 %1, %2
  br i1 %3, label %4, label %7

4:                                                ; preds = %0
  %5 = load i64, i64* @SavedMultiShardCommitProtocol, align 8
  store i64 %5, i64* @MultiShardCommitProtocol, align 8
  %6 = load i64, i64* @COMMIT_PROTOCOL_BARE, align 8
  store i64 %6, i64* @SavedMultiShardCommitProtocol, align 8
  br label %7

7:                                                ; preds = %4, %0
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
